# parallel_programming-course

./: README.md
final/: Makefile  README.md  a.m  arefer.m  b.m  c.m
final/include/: cnnModel.hpp
final/src/: cnnModel.cpp
final/toSeanLiu/: CMakeLists.txt  cnnModel.cpp  toSeanLiu.tar
hw1Pthread/: README.md  check.sh  hw1.cpp  hw1_semaphores.cpp  hw1_wait.cpp  makefile  pi
hw1Pthread/piOpenMP/: makefile  pi  pi.cpp
hw1Pthread/task/: main  piTask.cpp
hw1Pthread/tmp/: hw1.cpp  makefile  pi
hw2openmp/: 01run.py  02run.py  0650294.c  Makefile  cg.c  cgOrigin.c  cg_LARGE  cg_github.c  cg_good.c  cg_good2.c  cg_jiang.c  cg_sequential  gloden2.txt  golden.txt  out.txt  out11.txt  out12.txt  outTestcase.txt  outTestcase2.txt  outThread8.txt  outThread8_2.txt  outThread8_3.txt  outThread8_4.txt  outgithub.txt  outjiang.txt  tags
hw3MPI/: 0650294_integrate.c  0650294_prime.c  README.md  main  problem1.c
hw4_cuda/: README.md  serial_wave.c  wave.cu
hw5_opencl/: 0650294.cl  0650294.out  Makefile  README.md  build.sh  histogram  histogram.cpp  image-histogram.cpp  input.txt  main  out.txt  test.sh
